# secure-exec-server

./: LICENSE  README.md  meson.build
src/: secure-exec-server.c  ses_crypto.c  ses_crypto.h  ses_utils.c  ses_utils.h
test/: Makefile  example-script  script1-exit  script2-1s  script3-killed  test.cert  test.key  test1  test_auth_invalid_input  test_auth_signature  test_basic  test_certificates  test_child_parallel  test_child_process  test_keyusage  test_shutdown
